# openapi-agent-mcp

./: .gitignore  AGENTS.md  Makefile  README.md  environment.yml  openapi_agent_mcp_spec.md  pyproject.toml
docs/: README.md
examples/: README.md
src/openapi_agent_mcp/: cli.py  config.py  errors.py  server.py
src/openapi_agent_mcp/openapi/: cache.py  content_type.py  deref.py  fetch.py  index.py  lookup.py  store.py
src/openapi_agent_mcp/tools/: get_request_schema.py  get_response_schema.py  search_operations.py
tests/: test_deref.py  test_tools.py
tests/fixtures/: openapi_cycle_ref.json  openapi_minimal.json
